[gd_scene load_steps=5 format=3 uid="uid://vhq8isih58p2"]

[ext_resource type="Script" uid="uid://un2pvj44q542" path="res://main.gd" id="1_kerfr"]
[ext_resource type="AudioStream" uid="uid://cm2yspo2arkn2" path="res://assets/audio/menu.mp3" id="2_70kau"]
[ext_resource type="Script" uid="uid://bnddqvsf3cgup" path="res://addons/arduino/arduino.cs" id="3_h2yge"]

[sub_resource type="LabelSettings" id="LabelSettings_0xoof"]
font_size = 44

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kerfr")

[node name="new_game_button" type="Button" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 475.0
offset_right = 390.0
offset_bottom = 548.0
text = "New Game"

[node name="continue_button" type="Button" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 606.0
offset_right = 390.0
offset_bottom = 679.0

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 868.0
offset_right = 390.0
offset_bottom = 941.0
text = "Quit
"

[node name="fnac_ue" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 50.0
offset_right = 254.0
offset_bottom = 434.0
text = "Five
Nights
at
Candy's:
Ultimate
Edition"
label_settings = SubResource("LabelSettings_0xoof")

[node name="custom_night_button" type="Button" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 737.0
offset_right = 390.0
offset_bottom = 810.0
disabled = true
text = "Custom Night"

[node name="audio_main_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_70kau")
volume_db = -20.343
autoplay = true

[node name="arduino" type="Node" parent="."]
script = ExtResource("3_h2yge")
PortName = "/dev/ttyACM0"
metadata/_custom_type_script = "uid://bnddqvsf3cgup"

[connection signal="button_up" from="new_game_button" to="." method="_on_new_game_button_up"]
[connection signal="button_up" from="continue_button" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="quit_button" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="custom_night_button" to="." method="_on_custom_night_button_up"]
[connection signal="DataRecieved" from="arduino" to="." method="_on_arduino_data_recieved"]
